--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"Hello World" 
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+</head>
+<script src='https://d3js.org/d3.v5.min.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
+<script src="colors.js"></script>
+<body onload='init()'>
+    <h1 class="titles">Comparing the Fuel Efficiency of Gas and Electric Cars</h1>
+    <div class="text-container">
+        <p class="intro">
+            Practicing sustainability and protecting the environment have never been more important. Vehicle emissions are a large contributor to air pollution and climate change. 
+            Being conscious of this and choosing fuel-efficient cars can help reduce the impact on the environment. In this interactive slideshow, we will explore sample data on 
+            cars from 2017. We will focus on the fuel type, average city MPG, and average highway MPG of each car, and we will use these values to compare gas/diesel and electric 
+            cars. Which are the most fuel-efficient?
+        </p>
+        <a href="scene1.html" class="button">Start Slideshow</a>
+    </div>
+</body>
+</html>
